fix: overflowx hidden

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ body {
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; 
-    overflow-x: hidden !important;/*
     /* background-color: #00d5ff !important; */
 }
 
